<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <item android:id="@+id/action_team"
          android:title="@string/action_team"
          app:showAsAction="never"/>

    <item android:id="@+id/action_color"
          android:title="@string/action_select_color"
          app:showAsAction="never" />

    <item android:id="@+id/action_game"
          android:title="@string/action_game"
          app:showAsAction="never"/>

    <item android:id="@+id/action_save_game"
          android:title="@string/action_save_game"
          android:icon="@drawable/ic_action_submit_score"
          app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="never"/>

</menu>